# customer-management-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  ai-review.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/routes/: customers.py
app/core/: config.py  database.py  exceptions.py
app/dao/: customer_dao.py
app/models/: customer.py
app/schemas/: customer.py
app/services/: customer_factory.py  customer_service.py  customer_validator.py
customer_management_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
