[project]
name = "customer-management-api"
version = "0.1.0"
description = "Customer Management API take-home task"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.29.0",
    "email-validator>=2.1.1",
    "fastapi>=0.111.0",
    "pydantic-settings>=2.3.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["work*", "outputs*", "tests*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
